import { BaseSchema } from '@adonisjs/lucid/schema'

export default class extends BaseSchema {
  protected tableName = 'avis'

  async up() {
    this.schema.createTable(this.tableName, (table) => {
      table.increments('id')

      table.string('annonce_id').references('id').inTable('annonces').onDelete('CASCADE')
      table.integer('user_id').unsigned().references('id').inTable('users').onDelete('CASCADE')

      table.float('note').notNullable()
      table.text('commentaire').notNullable()

      table.timestamp('created_at')
      table.timestamp('updated_at')
    })
  }

  async down() {
    this.schema.dropTable(this.tableName)
  }
}
